# pydra-brainstat

./: .gitignore  Makefile  README.md  hatch.toml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  test.yaml
docs/: conf.py  index.rst
pydra/tasks/brainstat/: __init__.py
