[tool.poetry]
name = "pydra-brainstat"
version = "0.0.1"
description = "Pydra tasks for BrainStat"
authors = ["Ghislain Vaillant <ghislain.vaillant@icm-institute.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pydra = "^0.18"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"
