[tool.poetry]
name = "pydra-brainstat"
version = "0.0.1"
description = "Pydra tasks for BrainStat"
authors = ["The Aramis Lab"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pydra"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydra = "^0.22"
brainstat = "^0.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
pydata-sphinx-theme = "^0.13.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"
