[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydra-brainstat"
version = "0.0.0"
description = "Pydra tasks for BrainStat"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["pydra", "neuroimaging", "brainstat"]
authors = [
  { name = "Ghislain Vaillant", email = "ghislain.vaillant@icm-institute.org" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "attrs >=22.1.0",
  "brainstat >=0.4.2,<0.5",
  "pydra >=0.22",
]

[project.urls]
Documentation = "https://aramis-lab.github.io/pydra-brainstat/"
Issues = "https://github.com/aramis-lab/pydra-brainstat/issues"
Source = "https://github.com/aramis-lab/pydra-brainstat"

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
